snippets/Nemerle.Statechart/Tests/testsuite/positive/timed_events_and_self_transition.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
using System.Console;
using System.Threading;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  //flags debug;
  
   name "timed events and self transition";
  
   state A
   {
     
     after (100 ms) / check_every;
     
     state B
     {
       entry / WriteLine("entry");
       after (500 s) => @;
       a => D;
     }
     
   }
   
  state D
  {
  }
  
   #>)]
  public class example
  {
    
    check_every() : void
    {
      WriteLine("Ok");
    }
    
  }



module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("B", "EntryA", "EntryB");
    Thread.Sleep(1200);
    tester.Test("a", "D", "ExitB", "ExitA", "EntryD");
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
EntryA
entry
EntryB
[B]
Ok
Ok
Processing a 'a' 
ExitB
ExitA
EntryD
[D]
Ok
END-OUTPUT
*/
