snippets/Nemerle.Statechart/Tests/testsuite/negative/timed_event_negative.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags auto_initial testing;
  
  name "timed event negative";
  
  state A
  {
    a => B;
  }
  
  state B
  {
    after (-300 ms) / act1; // E: Timed relative event "after\(-00:00:00.3000000\)" need positive value above zero
    
    state D
    {
      after (0 s) => C; // E: Timed relative event "after\(00:00:00\)" need positive value above zero
    }
  }
   
  state C
  {
    
  }
  #>)]
  public class example
  {
  }

  
